--- a/index.html
+++ b/index.html
@@ -1,45 +1,69 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
- </head>
- <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Resume</title>
+</head>
+<body>
+  <h1>Developer's Resume</h1>
+  <img src="assets/images/web_developer.png" alt="Image of a web Developer">
+	<br>
+	<a href="public/contact_me.html">Contact Me</a>
+  <hr>
 
-    <h1>Luis' Velasquez Portfolio</h1>
-    <h2>I am a web developer</h2>
-    <hr>
+  <h2>Summary</h2>
+	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+		Animi quae illum, sunt possimus id enim iste. Incidunt, <br>
+		velit aliquam ut minima hic ipsam fugiat nulla beatae, sit, <br>
+		consectetur quisquam quas!</p>
 
-    <!--Project #1-->
-    <a href="public/movie_ranking.html"><h2>Movie Ranking Project</h2></a>
-    <img src="assets/images/movie_ranking.png" alt="Preview of project #1" width="400">
+  <h2>Education</h2>
+  <p>South Side High School</p>
+  <ul>
+    <li><i>2021 - 2025</i></li>
+    <li><a href="public/hs_diploma.html">High School Diploma</a></li>
+  </ul>
 
-    <br>
+  <p>FWCS Career Academy</p>
+  <ul>
+    <li><i>2023 - 2025</i></li>
+    <li><a href="public/pcep_certification.html">PCEP Certification</a></li>
+    <li><a href="public/certificate_1.html">Software Development Certificate</a></li>
+    <li><a href="public/certificate_2.html">Software Development Capstone Certificate</a></li>
+  </ul>
 
-    <!--Project #2-->
-    <a href="public/birthday_invite.html"><h2>Birthday Invite Project</h2></a>
-    <img src="assets/images/birthday_invite.png" alt="Preview of project #2" width="400">
+  <h2>Work Experience</h2>
+	<p>FWCS Career Academy</p>
+	<ul>
+		<li><i>2024 - 2025</i></li>
+		<li>Software Development Intern</li>
+	</ul>
 
-    <hr>
+  <h2>Skills</h2>
+  <ul>
+  	<li>Bilingual (English/Spanish)</li>
+    <li>Software Development</li>
+    <li>Agile Methodologies</li>
+    <li>Critical Thinking</li>
+    <li>Python</li>
+    <li>SQL</li>
 
-    <a href="public/about.html">About Me</a>
-    <a href="public/contact.html">Contact Me</a>
+  </ul>
+	 
+  <h2>Other</h2>
+	<p>Awards</p>
+	<ul>
+		<li>SkillsUSA Regional Champion</li>
+		<li>SkillsUSA State Runner-Up</li>
+		<li>4x Honor Roll</li>
+	</ul>
 
- </body>
- </html>
+	<hr>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+	<footer>
+		&copy; Luis Velasquez 2025
+	</footer>
+    
+</body>
+</html>
